# pulsecore-sdk

./: .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/ISSUE_TEMPLATE/: config.yml  hl2_effect.yml  hl2ep1_effect.yml  hl2ep2_effect.yml  new_game.yml  pack_bug.yml
.github/workflows/: ci.yml
docs/: effect-packs.md  protocol.md
examples/hl2/: effects.json  manifest.json
examples/hl2-source-mod/: README.md  integrate.ps1
examples/hl2-source-mod/mod/: gameinfo.txt
examples/hl2-source-mod/src/: pulsecore_hl2_integration.cpp
examples/test-client/: main.cpp
mods/: index.json
protocol/include/pulse/: json.h  protocol.h
protocol/src/: protocol.cpp
sdk/include/pulse/: integration.h
sdk/src/: integration.cpp
tools/: check_packs.py
